Add a lot of stuff and go to bed

--- a/app/src/main/res/layout/add_product.xml
+++ b/app/src/main/res/layout/add_product.xml
@@ -1,6 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_add_product"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="20dp"
+    tools:context="com.example.android.product_inventory.AddProduct">
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/add_product_text_view"
+                android:text="@string/productName" />
+
+            <EditText
+                android:id="@+id/edit_item_name"
+                style="@style/add_product_edit_text"
+                android:hint="@string/add_product_name_hint" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/add_product_text_view"
+                android:text="@string/productPrice" />
+
+            <EditText
+                android:id="@+id/edit_item_price"
+                style="@style/add_product_edit_text"
+                android:hint="@string/add_product_price_hint" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/add_product_text_view"
+                android:text="@string/productStock" />
+
+            <EditText
+                android:id="@+id/edit_stock"
+                style="@style/add_product_edit_text"
+                android:hint="@string/add_product_quantity" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/add_product_text_view"
+                android:text="@string/supEmail" />
+
+            <EditText
+                android:id="@+id/edit_sup_contact"
+                style="@style/add_product_edit_text"
+                android:hint="@string/add_supplier_contact" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/add_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add Image" />
+
+            <ImageView
+                android:id="@+id/image_view"
+                style="@style/add_product_image_view" />
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/save_prod"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Save product" />
+
+            <TextView
+                style="@style/add_product_text_view"
+                android:textColor="@color/red"
+                android:id="@+id/add_prod_err_msg" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+</ScrollView>
