--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,13 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list_item"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="@dimen/list_item_height"
     tools:context="com.example.android.product_inventory.ListItem"
-    android:padding="20dp"
-    android:descendantFocusability="blocksDescendants">
+    android:padding="8dp">
 
+<LinearLayout
+    android:id="@+id/thumb_and_btn"
+    android:layout_width="@dimen/thumb_width"
+    android:layout_height="@dimen/list_item_height"
+    android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/image_thumb"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/thumb_height"
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"
+        tools:src="@drawable/place_holder"
+        android:contentDescription="@string/product_image_description" />
+
+    <Button
+        android:id="@+id/orderProd"
+        android:layout_width="@dimen/thumb_width"
+        android:layout_height="48dp"
+        android:text="@string/order_btn" />
 
 </LinearLayout>
+
+    <LinearLayout
+        style="@style/list_layout"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/list_item_height"
+        android:id="@+id/text_container">
+
+        <TextView
+            style="@style/list_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/list_text_view"
+            android:id="@+id/dbProductName"
+            android:text="@string/productName"/>
+
+        <TextView
+            style="@style/list_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/list_text_view"
+            android:id="@+id/dbProductStock"
+            android:text="@string/productStock" />
+
+        <TextView
+            style="@style/list_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/list_text_view"
+            android:id="@+id/dbProductPrice"
+            android:text="@string/productPrice"/>
+
+        <TextView
+            style="@style/list_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/list_text_view"
+            android:id="@+id/dbProductSold"
+            android:text="@string/itemSold"/>
+    </LinearLayout>
+
+</RelativeLayout>
