--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,68 +2,112 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list_item"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="@dimen/list_item_height"
-    tools:context="com.example.android.product_inventory.ListItem"
-    android:padding="8dp">
-
-<LinearLayout
-    android:id="@+id/thumb_and_btn"
-    android:layout_width="@dimen/thumb_width"
-    android:layout_height="@dimen/list_item_height"
-    android:orientation="vertical">
-
-    <ImageView
-        android:id="@+id/image_thumb"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/thumb_height"
-        android:scaleType="centerCrop"
-        android:adjustViewBounds="true"
-        tools:src="@drawable/place_holder"
-        android:contentDescription="@string/product_image_description" />
-
-    <Button
-        android:id="@+id/orderProd"
-        android:layout_width="@dimen/thumb_width"
-        android:layout_height="48dp"
-        android:text="@string/order_btn" />
-
-</LinearLayout>
+    android:orientation="horizontal"
+    android:padding="8dp"
+    tools:context="com.example.android.product_inventory.ListItem">
 
     <LinearLayout
+        android:id="@+id/thumb_and_btn"
+        android:layout_width="@dimen/thumb_width"
+        android:layout_height="@dimen/list_item_height"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/image_thumb"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/thumb_height"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/product_image_description"
+            android:scaleType="centerCrop"
+            tools:src="@drawable/place_holder" />
+
+        <Button
+            android:id="@+id/list_order_prod"
+            android:layout_width="@dimen/thumb_width"
+            android:layout_height="48dp"
+            android:text="@string/sell_btn" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/text_container"
         style="@style/list_layout"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/list_item_height"
-        android:id="@+id/text_container">
+        android:layout_height="@dimen/list_item_height">
 
-        <TextView
-            style="@style/list_text_view"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/list_text_view"
-            android:id="@+id/dbProductName"
-            android:text="@string/productName"/>
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
 
-        <TextView
-            style="@style/list_text_view"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/list_text_view"
-            android:id="@+id/dbProductStock"
-            android:text="@string/productStock" />
+            <TextView
+                style="@style/list_text_label"
+                android:layout_width="@dimen/list_text_view"
+                android:text="@string/product_name" />
 
-        <TextView
-            style="@style/list_text_view"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/list_text_view"
-            android:id="@+id/dbProductPrice"
-            android:text="@string/productPrice"/>
+            <TextView
+                style="@style/list_text_view"
+                android:layout_width="@dimen/list_text_view"
+                android:id="@+id/list_product_name" />
 
-        <TextView
-            style="@style/list_text_view"
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/list_text_view"
-            android:id="@+id/dbProductSold"
-            android:text="@string/itemSold"/>
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/list_text_label"
+                android:layout_width="@dimen/list_text_view"
+                android:text="@string/product_stock" />
+
+            <TextView
+                android:id="@+id/list_product_stock"
+                style="@style/list_text_view"
+                android:layout_width="@dimen/list_text_view" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/list_text_label"
+                android:layout_width="@dimen/list_text_view"
+                android:text="@string/product_price" />
+
+            <TextView
+                android:id="@+id/list_product_price"
+                style="@style/list_text_view"
+                android:layout_width="@dimen/list_text_view"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/list_text_label"
+                android:layout_width="@dimen/list_text_view"
+                android:text="@string/item_sold" />
+
+            <TextView
+                style="@style/list_text_view"
+                android:layout_width="@dimen/list_text_view"
+                android:id="@+id/list_product_sold" />
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </RelativeLayout>
