--- a/app/src/main/res/layout/product_details.xml
+++ b/app/src/main/res/layout/product_details.xml
@@ -21,7 +21,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/productName"
+            android:text="@string/product_name"
             android:textColor="#000000"
             android:textSize="16sp"
             android:paddingTop="10dp"
@@ -44,7 +44,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/productPrice"
+                android:text="@string/product_price"
                 android:textColor="#000000"
                 android:textSize="16sp"
                 android:paddingBottom="10dp"
@@ -52,7 +52,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/productStock"
+                android:text="@string/product_stock"
                 android:textColor="#000000"
                 android:textSize="16sp"
                 android:paddingBottom="10dp"
@@ -87,7 +87,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/itemSold"
+            android:text="@string/item_sold"
             android:textColor="#000000"
             android:textSize="16sp"
             android:paddingBottom="10dp"
