--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,11 +41,23 @@
 
     </style>
 
-    <!-- List item TextView style -->
-    <style name="list_text_view">
+    <!-- List item TextView Label style -->
+    <style name="list_text_label">
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
         <item name="android:textColor">#000000</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:paddingTop">@dimen/activity_default_padding</item>
+        <item name="android:paddingBottom">@dimen/activity_default_padding</item>
+    </style>
+
+    <!-- List item TextView style -->
+    <style name="list_text_view">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">2</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:gravity">right</item>
         <item name="android:paddingTop">@dimen/activity_default_padding</item>
         <item name="android:paddingBottom">@dimen/activity_default_padding</item>
     </style>
