--- a/app/src/main/res/layout/add_product.xml
+++ b/app/src/main/res/layout/add_product.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_add_product"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
+    android:padding="@dimen/activity_default_padding"
     tools:context="com.example.android.product_inventory.AddProduct">
 
     <LinearLayout
