--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -15,19 +15,20 @@
         android:layout_height="@dimen/list_item_height"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/image_thumb"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/thumb_height"
-            android:adjustViewBounds="true"
-            android:contentDescription="@string/product_image_description"
-            android:scaleType="centerCrop"
-            tools:src="@drawable/place_holder" />
+        <!--<ImageView-->
+            <!--android:id="@+id/image_thumb"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="@dimen/thumb_height"-->
+            <!--android:adjustViewBounds="true"-->
+            <!--android:contentDescription="@string/product_image_description"-->
+            <!--android:scaleType="centerCrop"-->
+            <!--tools:src="@drawable/place_holder" />-->
 
         <Button
             android:id="@+id/list_sell_btn"
             android:layout_width="@dimen/thumb_width"
             android:layout_height="48dp"
+            android:layout_marginTop="56dp"
             android:text="@string/sell_btn" />
 
     </LinearLayout>
