--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -84,7 +84,7 @@
 
     <!-- Add Product ImageView style -->
     <style name="add_product_image_view">
-        <item name="android:layout_height">200dp</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:padding">@dimen/activity_default_padding</item>
     </style>
