--- a/app/src/main/res/layout/product_details.xml
+++ b/app/src/main/res/layout/product_details.xml
@@ -4,118 +4,113 @@
     android:id="@+id/activity_product_details"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
+    android:background="@color/colorPrimaryDark"
+    android:padding="@dimen/activity_default_padding"
     tools:context="com.example.android.product_inventory.ProductDetails"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:fillViewport="true">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:padding="@dimen/activity_default_padding"
         android:orientation="vertical">
 
         <ImageView
-            android:layout_width="341dp"
+            android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:id="@+id/imageViewDetails" />
+            android:scaleType="center"
+            android:id="@+id/detail_image_view" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/product_name"
-            android:textColor="#000000"
-            android:textSize="16sp"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:id="@+id/textViewProdName"/>
-        <TextView
-            android:layout_width="140dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/textViewProdName2"
-            android:layout_below="@+id/textViewProdName"
-            android:paddingBottom="20dp"
-            android:textSize="15sp"
-            android:textColor="#000000"/>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
+                style="@style/add_product_text_view"
+                android:gravity="center_vertical"
+                android:text="@string/product_name"
+                android:id="@+id/detail_prod_name" />
+
+            <TextView
+                style="@style/add_product_text_view"
+                android:gravity="center_vertical"
+                android:textAllCaps="true"
+                android:textSize="24sp"
+                android:id="@+id/detail_prod_name_output"/>
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/add_product_text_view"
+                android:gravity="center_vertical"
                 android:text="@string/product_price"
-                android:textColor="#000000"
-                android:textSize="16sp"
-                android:paddingBottom="10dp"
-                android:id="@+id/textViewProdPrice" />
+                android:id="@+id/detail_prod_price" />
+
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/product_stock"
-                android:textColor="#000000"
-                android:textSize="16sp"
-                android:paddingBottom="10dp"
-                android:id="@+id/textViewProdQty"
-                android:layout_weight="1"/>
+                style="@style/add_product_text_view"
+                android:id="@+id/detail_prod_price_output"
+                android:gravity="center_vertical"/>
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/textViewProdPrice2"
-                android:layout_weight="1"
-                android:layout_below="@+id/textViewProdPrice"
-                android:paddingBottom="20dp"
-                android:textSize="15sp"
-                android:textColor="#000000"/>
+                style="@style/add_product_text_view"
+                android:text="@string/product_stock"
+                android:gravity="center_vertical"
+                android:id="@+id/detail_prod_qty" />
+
             <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:id="@+id/textViewProdQty2"
-                android:layout_below="@+id/textViewProdQty"
-                android:paddingBottom="20dp"
-                android:textSize="15sp"
-                android:textColor="#000000"/>
+                style="@style/add_product_text_view"
+                android:gravity="center_vertical"
+                android:id="@+id/detail_prod_qty_output" />
         </LinearLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/item_sold"
-            android:textColor="#000000"
-            android:textSize="16sp"
-            android:paddingBottom="10dp"
-            android:id="@+id/textViewProdSold"
-            android:layout_below="@id/textViewProdQty2"/>
-        <TextView
-            android:layout_width="140dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/textViewProdSold2"
-            android:layout_below="@+id/textViewProdSold"
-            android:paddingBottom="20dp"
-            android:textSize="15sp"
-            android:textColor="#000000"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/add_product_text_view"
+                android:text="@string/item_sold"
+                android:gravity="center_vertical"
+                android:id="@+id/detail_prod_sold" />
+
+            <TextView
+                style="@style/add_product_text_view"
+                android:gravity="center_vertical"
+                android:id="@+id/textViewProdSold2" />
+        </LinearLayout>
+
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/add_product_text_view"
             android:text="Modified product Quantity"
-            android:textColor="#000000"
-            android:textSize="16sp"
             android:layout_gravity="center_horizontal"
-            android:id="@+id/textVieModQty"
+            android:id="@+id/detail_mod_qty"
             android:visibility="gone"/>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:id="@+id/adjQty1"
+            android:id="@+id/detail_adj_qty_1"
             android:layout_gravity="center_horizontal"
             android:padding="5dp"
             android:visibility="gone"
@@ -128,7 +123,7 @@
             <EditText
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/editQty"
+                android:id="@+id/detail_edit_qty"
                 android:maxLines="1"/>
             <Button
                 android:layout_width="wrap_content"
@@ -141,7 +136,7 @@
             android:layout_height="wrap_content"
             android:text="Wrong format"
             android:textColor="@color/red"
-            android:id="@+id/editQtyError"
+            android:id="@+id/detail_edit_qty_error"
             android:layout_gravity="center"
             android:visibility="gone"/>
 
@@ -149,7 +144,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:id="@+id/adjQty2"
+            android:id="@+id/detail_adj_qty_2"
             android:layout_gravity="center_horizontal"
             android:padding="5dp"
             android:visibility="gone">
@@ -177,20 +172,20 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="Order"
-                android:id="@+id/btnOrder"
+                android:id="@+id/detail_btn_order"
                 />
             <Button
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="Delete"
-                android:id="@+id/btnDeletProd"/>
+                android:id="@+id/detail_btn_delete_prod"/>
             <Button
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="Edit Qty"
-                android:id="@+id/btnAdjustQty"/>
+                android:id="@+id/detail_btn_adjust_qty"/>
         </LinearLayout>
 
     </LinearLayout>
