--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,7 +15,7 @@
         <item name="android:layout_weight">2</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:padding">@dimen/activity_default_padding</item>
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">16sp</item>
     </style>
 
@@ -45,7 +45,7 @@
     <style name="list_text_label">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">16sp</item>
         <item name="android:paddingTop">@dimen/activity_default_padding</item>
         <item name="android:paddingBottom">@dimen/activity_default_padding</item>
@@ -55,7 +55,7 @@
     <style name="list_text_view">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">2</item>
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">16sp</item>
         <item name="android:gravity">right</item>
         <item name="android:paddingTop">@dimen/activity_default_padding</item>
@@ -67,6 +67,8 @@
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">2</item>
+        <item name="android:textColorHint">@android:color/darker_gray</item>
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:paddingBottom">@dimen/activity_default_padding</item>
         <item name="android:maxLines">1</item>
     </style>
@@ -77,7 +79,7 @@
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_weight">1</item>
         <item name="android:gravity">bottom</item>
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">16sp</item>
         <item name="android:padding">@dimen/activity_default_padding</item>
     </style>
